Ros2_workspace/log/build_2022-05-21_16-50-22/nn_drone_final/stderr.log
  File "/home/xilinx/wrkspace/install/nn_drone_final/lib/python3.8/site-packages/nn_drone_final/SimpleArmMission.py", line 28
    else if((msg.data.find("missile") == 0) & (self.armed == True)):
         ^
SyntaxError: invalid syntax

